# lightkube

./: .coveragerc  .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup-test-env.sh  setup.py  sitemap.xml  test.sh
.github/workflows/: python-package.yml
client/: index.html
css/: custom.css
docs/: API.md  async-usage.md  client.md  codecs.md  configuration.md  custom-resources.md  exceptions.md  generic-resources.md  index.md  list-watch.md  requirements.txt  resources-and-models.md  resources.md  selectors.md  utils.md
docs/reference/: async_client.md  client.md  configuration.md  exceptions.md  types.md
e2e-tests/: test-crd-2.yaml  test_client.py
example/: index.html
lightkube/: __init__.py  codecs.py  generic_resource.py  operators.py  types.py
lightkube/config/: client_adapter.py  config.py  kubeconfig.py  models.py
lightkube/core/: async_client.py  client.py  dataclasses_dict.py  dataclasses_json.py  exceptions.py  generic_client.py  generic_resource.py  internal_models.py  internal_resources.py  quantity.py  resource.py  resource_registry.py  schema.py  selector.py  sort_objects.py  typing_extra.py
lightkube/utils/: quantity.py
resources-and-models/: index.html
scripts/: update_readme.py
search/: search_index.json
selectors/: index.html
src/lightkube/: __init__.py  codecs.py  exceptions.py  generic_resource.py  operators.py  types.py
src/lightkube/config/: client_adapter.py  kubeconfig.py  models.py
src/lightkube/core/: async_client.py  client.py  dataclasses_dict.py  exceptions.py  generic_client.py  internal_models.py  internal_resources.py  resource.py  resource_registry.py  schema.py  selector.py  sort_objects.py  websocket.py
src/lightkube/utils/: quantity.py
tests/: fake_ws.py  test_async_client.py  test_client.py  test_client_adapter.py  test_codecs.py  test_config.py  test_config.yaml  test_config_exec.yaml  test_config_user_password.yaml  test_dataclasses_dict.py  test_dataclasses_json.py  test_generic_resource.py  test_operators.py  test_quantity.py  test_resource_registry.py  test_selector.py  test_sort_objects.py
tests/data/: auth_script.sh  clientkey.pem  clientreq.pem  example-def-with-lists.yaml  example-def-with-nulls.yaml  example-def.tmpl  example-def.yaml  example-multi-version-crd.yaml
tools/: build.sh  compile.py  compile_models.py  make_class.py  model.py
tools/templates/: class.tmpl  models.tmpl
