[project]
name = "lightkube"
version = "0.18.0"
description = "Lightweight kubernetes client library"
readme = "README.md"
authors = [
    {name="Giuseppe Tribulato", email="gtsystem@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
urls = {Repository="https://github.com/gtsystem/lightkube"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "lightkube-models >= 1.15.12.0",
    "httpx[http2] >= 0.28.1, < 1.0.0",
    "PyYAML",
]

[project.optional-dependencies]
jinja-templates = ["jinja2"]

[dependency-groups]
linting = [
    "ruff",
    "mypy>=1.14.1",
]
testing = [
    "asyncmock",
    "pytest>=8.3.5",
    "pytest-asyncio",
    "respx",
]
coverage = [
    "coveralls",
]
docs = [
    "mkdocstrings",
    "mkdocstrings-python",
    "markdown",
    "mkautodoc",
    "markdown-include",
    "mkdocs-material"
]
dev = [
    { include-group = "linting"},
    { include-group = "testing"},
    { include-group = "coverage"},
    { include-group = "docs"},
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Can be removed when resources and models move into a proper 'lightkube_models' package
source-exclude = ["lightkube/resources", "lightkube/models"]
wheel-exclude = ["lightkube/resources", "lightkube/models"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = [
    "RUF", # Ruff-specific rules
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warnings
    "F",   # Pyflakes / flake8
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "I",   # isort
]

[[tool.mypy.overrides]]
module = [
    "lightkube.codecs",
    "lightkube.config.client_adapter",
    "lightkube.config.kubeconfig",
    "lightkube.config.models",
    "lightkube.core.async_client",
    "lightkube.core.client",
    "lightkube.core.dataclasses_dict",
    "lightkube.core.exceptions",
    "lightkube.core.generic_client",
    "lightkube.core.internal_models",
    "lightkube.core.internal_resources",
    "lightkube.core.resource",
    "lightkube.core.selector",
    "lightkube.core.sort_objects",
    "lightkube.models.core_v1",
    "lightkube.generic_resource",
    "lightkube.utils.quantity",
    "tests.test_async_client",
    "tests.test_client",
    "tests.test_codecs",
    "tests.test_dataclasses_dict",
    "tests.test_generic_resource",
    "tests.test_quantity",
    "tests.test_resource_registry",
]
ignore_errors = true
